Add the templates (#7)
* Updated admin dashboard page

* Introduced the export option in the Attendance

* Add all recent changes and templates